<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#4A4A4A"
    app:layout_constraintBottom_toBottomOf="parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"
        android:id="@+id/linearLayout2"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login_title_user"
            android:id="@+id/text_login"
            android:textSize="25sp"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:id="@+id/username"
            android:hint="@string/email_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="16dp"
            android:id="@+id/password"
            android:hint="@string/password_title"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            android:background="#ff3eaff9"
            android:textColor="#ffffff"
            android:text="@string/button_login"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:id="@+id/register"
        android:textColor="#D8D9D9"
        android:layout_marginBottom="13dp"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:textSize="16dp"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>