<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    tools:context="system.management.information.itms.RegisterUserFragment"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:weightSum="1">

        <TextView
            android:id="@+id/txtPageToolBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="เพิ่มผู้ใช้"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            />

    </android.support.v7.widget.Toolbar>



        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alertdialog"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname_lastname"
                android:padding="20dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numberphone"
                android:padding="20dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_title"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_title"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="#FFFFFF" />
            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/alertdialog"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

